deployment/demo/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: dash-ecomm
  name: demo
spec:
  ports:
    - name: demo-port
      port: 7000
      targetPort: 7000
  selector:
    component: demo
  type: ClusterIP
