deployment/demo/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: dash-ecomm
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - ns-botlibrary-ecomm.uksouth.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: ns-botlibrary-ecomm.uksouth.cloudapp.azure.com
    http:
      paths:
      - backend:
          serviceName: demo
          servicePort: 7000
        path: /ecomm/(.*)
